# robolens

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CNAME  index.md
docs/api/: index.md
docs/guide/: cli.md  concepts.md  logging-and-rerun.md  plugins.md  policies-and-embodiments.md  quickstart.md  scoring.md  writing-a-benchmark.md
examples/: quickstart.py
plans/: 0001-foundation-design.md  0002-ensembling-controller.md  0003-rename-to-inspect-robots.md  0004-inspect-robots-cutover-execution.md
plugins/inspect-robots-isaacsim/: .gitignore  README.md  pyproject.toml
plugins/inspect-robots-isaacsim/scripts/: boot_proof.py
plugins/inspect-robots-isaacsim/src/inspect_robots_isaacsim/: __init__.py  embodiment.py
plugins/inspect-robots-isaacsim/tests/: test_isaacsim_embodiment.py
src/inspect_robots/: CLAUDE.md  __init__.py  _builtins.py  approver.py  cli.py  compat.py  controller.py  embodiment.py  errors.py  eval.py  frames.py  log.py  policy.py  registry.py  rollout.py  scene.py  scorer.py  spaces.py  task.py  transcript.py  types.py
src/inspect_robots/logging/: __init__.py  json_log.py  rerun_sink.py  sink.py
src/inspect_robots/mock/: __init__.py  cubepick.py  policies.py
src/robolens/: _builtins.py  cli.py  controller.py  eval.py  registry.py  spaces.py  task.py
src/robolens/logging/: json_log.py
tests/: test_api_snapshot.py  test_compat.py  test_controller.py  test_coverage_completion.py  test_ensembling.py  test_eval_log.py  test_eval_orchestration.py  test_package.py  test_registry_cli.py  test_rerun_sink.py  test_rollout_hardening.py  test_scorers.py  test_string_resolution.py  test_tracer_eval.py  test_types_spaces.py
