[build-system]
requires = ["hatchling>=1.18", "hatch-vcs>=0.3"]
build-backend = "hatchling.build"

[project]
name = "inspect-robots"
dynamic = ["version"]
description = "The Inspect AI for robotics — an evaluation framework for VLA (vision-language-action) models across real robots and simulators."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Inspect Robots contributors" }]
keywords = [
    "robotics",
    "evaluation",
    "vla",
    "vision-language-action",
    "benchmark",
    "embodied-ai",
    "physical-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# Core depends ONLY on numpy + the standard library. Everything else is an extra.
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
rerun = ["rerun-sdk>=0.20"]
viz = ["rerun-sdk>=0.20"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
    # numpy 2.5's type stubs use 3.12-only syntax that mypy (python_version 3.10)
    # rejects; pin the 2.4.x line for a deterministic dev/CI gate (runtime is free).
    "numpy<2.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-llmstxt>=0.2",
]
all = ["inspect-robots[rerun]"]

[project.scripts]
inspect-robots = "inspect_robots.cli:main"

[project.urls]
Homepage = "https://github.com/robocurve/inspect-robots"
Repository = "https://github.com/robocurve/inspect-robots"
Issues = "https://github.com/robocurve/inspect-robots/issues"

# ---------------------------------------------------------------------------
# Build / versioning: single-source the version from git tags via hatch-vcs.
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Before the first tag exists, fall back to a sensible dev version instead of failing.
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_robots"]

[tool.hatch.build.targets.sdist]
include = ["src/inspect_robots", "tests", "README.md", "LICENSE"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["inspect_robots"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
files = ["src/inspect_robots"]

[[tool.mypy.overrides]]
module = ["rerun.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "hardware: requires real robot hardware (deselected by default in CI)",
    "sim: requires a simulator backend (deselected by default in CI)",
    "slow: slow tests (deselected by default in CI)",
]

[tool.coverage.run]
branch = true
source = ["inspect_robots"]

[tool.coverage.report]
fail_under = 100
show_missing = true
# Lines that are never executed at runtime by design.
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.$",          # Protocol / stub bodies on their own line
    ": \\.\\.\\.$",             # one-line Protocol method bodies (def ...: ...)
    "pragma: no cover",
]

# ---------------------------------------------------------------------------
# uv workspace
# ---------------------------------------------------------------------------
# First-party plugins (concrete simulators/VLAs that are "out of scope" for the
# numpy-only core) live in plugins/* as their OWN packages — each with its own
# pyproject, entry point, tests, and coverage scope. Co-locating them here keeps
# everything in one repo and versioned together, while the core stays numpy-only
# and 100%-covered (coverage source above is scoped to "inspect_robots" only, so plugin
# code never counts toward the core gate). `uv sync` installs the core plus every
# plugin editable into one shared environment.
[tool.uv.workspace]
members = ["plugins/*"]
